# Sanskrit-Transliteration

./: .gitignore  README.MD  main.py  pyproject.toml
sanskrit_transliteration/: __init__.py  __main__.py  from_skt.py  hk_and_skt.py  utils.py  velthius_and_hk.py  velthius_and_skt.py  wx_slp1.py  wx_slp1_hk.py  wx_slp1_skt.py  wx_slp1_vel.py
tests/: test_hk_skt.py  test_velthius_hk.py  test_velthius_skt.py  test_wx_slp1.py  test_wx_slp1_hk.py  test_wx_slp1_skt.py  test_wx_slp1_vel.py
