[tool.poetry]
name = "sanskrit-transliteration"
version = "0.1.0"
description = ""
authors = ["Dhiraj Eadara <eadaradhiraj@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = 'tests'